Finished notebooks for paper

--- a/paper/notebooks/representing-orbits.ipynb
+++ b/paper/notebooks/representing-orbits.ipynb
@@ -23,17 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Projects/Science/GeneralAstrodynamics.jl/paper`\n",
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Projects/Astrodynamics/GeneralAstrodynamics.jl/paper`\n",
       "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Projects/Science/GeneralAstrodynamics.jl/paper/Project.toml`\n",
-      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Projects/Science/GeneralAstrodynamics.jl/paper/Manifest.toml`\n"
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Projects/Astrodynamics/GeneralAstrodynamics.jl/paper/Project.toml`\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `~/Projects/Astrodynamics/GeneralAstrodynamics.jl/paper/Manifest.toml`\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
     "Pkg.develop(; url=joinpath(@__DIR__, \"..\", \"..\"))\n",
     "Pkg.instantiate()\n",
     "\n",
-    "using GeneralAstrodynamics, DynamicQuantities"
+    "using GeneralAstrodynamics, DynamicQuantities, StaticArrays"
    ]
   },
   {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -128,12 +128,12 @@
       "text/plain": [
        "CartesianState with eltype Float64\n",
        "\n",
-       "  x: 6.5461552327e-314\n",
-       "  y: 0.0\n",
-       "  z: 2.76236e-318\n",
-       "  ẋ: 0.0\n",
-       "  ẏ: 0.0\n",
-       "  ż: 0.0\n"
+       "  x: 3.0665334336e-314\n",
+       "  y: 5.0e-324\n",
+       "  z: 1.5714e-317\n",
+       "  ẋ: 5.0e-324\n",
+       "  ẏ: 4.0e-323\n",
+       "  ż: NaN\n"
       ]
      },
      "metadata": {},
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -215,12 +215,12 @@
       "text/plain": [
        "OrbitalElements with eltype Float64\n",
        "\n",
-       "  e: 2.247463161e-314\n",
-       "  a: 2.2474631847e-314\n",
-       "  i: 6.5519200776e-314\n",
-       "  Ω: 6.551920109e-314\n",
-       "  ω: 6.551920141e-314\n",
-       "  ν: 6.5519200144e-314\n"
+       "  e: 2.03e-322\n",
+       "  a: 4.96255345484001e228\n",
+       "  i: 6.807402956851786e199\n",
+       "  Ω: 9.701582850788981e189\n",
+       "  ω: 2.1162700550059405e214\n",
+       "  ν: 6.2145277554479345e175\n"
       ]
      },
      "metadata": {},
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -309,19 +309,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CartesianState with eltype Float64\n",
+       "\n",
+       "  x: 0.9560323290768354\n",
+       "  y: 0.6378002185832633\n",
+       "  z: 0.733863458978701\n",
+       "  ẋ: 0.3759268268204885\n",
+       "  ẏ: 0.8662613119506547\n",
+       "  ż: 0.4776611433305632\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rand(CartesianState)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "6-element Vector{Float64}:\n",
-       "  0.5320211259754285\n",
-       "  0.1170495191407255\n",
-       "  0.3479331942359735\n",
-       " -1.2791637817164785\n",
-       " -1.5520614922017848\n",
-       "  3.1609363999359554"
+       " -0.20047416524420056\n",
+       " -0.23012851587920408\n",
+       " -0.8927694627193575\n",
+       "  0.060723333253600464\n",
+       "  0.013593251974973165\n",
+       "  0.1830599389748437"
       ]
      },
      "metadata": {},
@@ -333,8 +359,10 @@
     "\n",
     "f = AstrodynamicalModels.dynamics(earth)\n",
     "\n",
-    "du = let u = randn(6), p = randn(1), t = NaN\n",
-    "    f(u, p, t)\n",
+    "du = let u = randn(CartesianState), p = randn(R2BParameters), t = NaN\n",
+    "    du = zeros(6)\n",
+    "    f(du, u, p, t)\n",
+    "    du\n",
     "end"
    ]
   },
@@ -355,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -390,19 +418,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "6-element Vector{Float64}:\n",
-       "  0.21394186813553623\n",
-       " -0.07489499408722787\n",
-       "  1.7935136707036081\n",
-       " -0.22029381446111654\n",
-       "  0.18011584552441406\n",
-       "  0.11733767014180901"
+       "  0.5688870324806231\n",
+       "  0.20773839389773607\n",
+       "  0.6107848389898091\n",
+       " -0.7392318217719731\n",
+       " -0.21888630690684702\n",
+       " -0.49614552704070186"
       ]
      },
      "metadata": {},
@@ -411,12 +439,13 @@
    ],
    "source": [
     "f = dynamics(orbit)\n",
-    "f(randn(6), randn(1), 0)"
+    "f(du, rand(CartesianState), rand(R2BParameters), 0)\n",
+    "du"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.3",
+   "display_name": "Julia 1.10.4",
    "language": "julia",
    "name": "julia-1.10"
   },
@@ -470,7 +499,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.3"
+   "version": "1.10.4"
   }
  },
  "nbformat": 4,
