Adds Quarto documentation

--- a/lib/AstrodynamicalModels/docs/src/models/cr3b/index.qmd
+++ b/lib/AstrodynamicalModels/docs/src/models/cr3b/index.qmd
@@ -1,11 +1,11 @@
 # Circular Restricted Three-body Dynamics
 _Also known as CR3BP dynamics!_
 
-```@setup main
+```{julia}
+#| echo: false
+#| output: false
 using AstrodynamicalModels
 using ModelingToolkit
-using Latexify
-Latexify.auto_display(true)
 ```
 
 ## Overview
@@ -17,14 +17,16 @@ a spacecraft moves nearby the Earth and the Sun, the Earth and the Moon, the Sun
 Jupiter, and other systems in our solar system! The equations of motion 
 are provided below.
 
-$\begin{aligned}
+$$
+\begin{aligned}
 \frac{dx(t)}{dt} =& ẋ\left( t \right) \\
 \frac{dy(t)}{dt} =& ẏ\left( t \right) \\
 \frac{dz(t)}{dt} =& ż\left( t \right) \\
 \frac{dẋ(t)}{dt} =& 2 ẏ\left( t \right) - \left( \frac{1}{\sqrt{\left( \mu + x\left( t \right) \right)^{2} + \left( y\left( t \right) \right)^{2} + \left( z\left( t \right) \right)^{2}}} \right)^{3} \left( 1 - \mu \right) \left( \mu + x\left( t \right) \right) - \left( \frac{1}{\sqrt{\left( -1 + \mu + x\left( t \right) \right)^{2} + \left( y\left( t \right) \right)^{2} + \left( z\left( t \right) \right)^{2}}} \right)^{3} \mu \left( -1 + \mu + x\left( t \right) \right) + x\left( t \right) \\
 \frac{dẏ(t)}{dt} =&  - 2 ẋ\left( t \right) - \left( \left( \frac{1}{\sqrt{\left( \mu + x\left( t \right) \right)^{2} + \left( y\left( t \right) \right)^{2} + \left( z\left( t \right) \right)^{2}}} \right)^{3} \left( 1 - \mu \right) + \left( \frac{1}{\sqrt{\left( -1 + \mu + x\left( t \right) \right)^{2} + \left( y\left( t \right) \right)^{2} + \left( z\left( t \right) \right)^{2}}} \right)^{3} \mu \right) y\left( t \right) + y\left( t \right) \\
 \frac{dż(t)}{dt} =& \left(  - \left( \frac{1}{\sqrt{\left( \mu + x\left( t \right) \right)^{2} + \left( y\left( t \right) \right)^{2} + \left( z\left( t \right) \right)^{2}}} \right)^{3} \left( 1 - \mu \right) - \left( \frac{1}{\sqrt{\left( -1 + \mu + x\left( t \right) \right)^{2} + \left( y\left( t \right) \right)^{2} + \left( z\left( t \right) \right)^{2}}} \right)^{3} \mu \right) z\left( t \right)
-\end{aligned}$
+\end{aligned}
+$$
 
 ## Examples
 
@@ -33,8 +35,9 @@ Recall that the state transition matrix is simply the local linearization
 of a spacecraft within CR3BP dynamics. Let's look at the Jacobian (another
 word for "local linearization") below, evaluated at some random state.
 
-```@repl main
-f = CR3BPFunction(; jac=true)
+```{julia}
+#| echo: true
+f = CR3BFunction(; jac=true)
 let x = randn(6), p = rand((0.0, 0.5)), t = 0
     f.jac(x, p, t)
 end
@@ -49,7 +52,8 @@ identity matrix, and propagate our spacecraft for one periodic orbit:
 the result is known as the Monodromy Matrix! The Monodromy Matrix
 provides stability characteristics for the entire periodic orbit.
 
-```@repl main
+```{julia}
+#| echo: true
 model = CR3BSystem(; stm=true)
 ```
 
