--- a/lib/AstrodynamicalModels/docs/src/models/entry/index.qmd
+++ b/lib/AstrodynamicalModels/docs/src/models/entry/index.qmd
@@ -2,11 +2,11 @@
 
 _Also known as canonical entry dynamics!_
 
-```@setup main
+```{julia}
+#| echo: false
+#| output: false
 using AstrodynamicalModels
 using ModelingToolkit
-using Latexify
-Latexify.auto_display(true)
 ```
 
 ## Overview
@@ -15,28 +15,33 @@ The Planar Entry model assumes a spacecraft moving in an exponential atmosphere
 about a spherical planet. Acceleration due to gravity is ignored. The equations
 of motion are shown below.
 
-$$\begin{aligned}
+$$
+\begin{aligned}
   \dot{\gamma} &= \frac{1}{v} \left( L_m - (1 - \frac{v^2}{v_c^2}) g \cos{\gamma} \right) \\
   \dot{v} &= -D_m - g \sin{\gamma} \\
   \dot{r} &= v \sin{\gamma} \\
   \dot{\theta} &= \frac{v}{r} \cos{\gamma} \\
-\end{aligned}$$
+\end{aligned}
+$$
 
 ## Examples
 
-```@repl main
+```{julia}
+#| echo: true
 model = PlanarEntrySystem()
 ```
 
 Let's compute the Jacobian for these dynamics.
 
-```@repl main
+```{julia}
+#| echo: true
 J = calculate_jacobian(PlanarEntrySystem())
 ```
 
 Finally, let's construct a Julia function which implements these dynamics!
 
-```@repl main
+```{julia}
+#| echo: true
 f = PlanarEntryFunction()
 let u = abs.(randn(4)), p = abs.(randn(7)), t = 0
     f(u, p, t)
