AstrodynamicalSolvers.jl: updated plotting docs [skip ci]

--- a/lib/AstrodynamicalSolvers/docs/src/examples/plotting/index.qmd
+++ b/lib/AstrodynamicalSolvers/docs/src/examples/plotting/index.qmd
@@ -135,7 +135,14 @@ unstable = let
     Φ = monodromy(u, μ, ic.Δt, CR3BFunction(stm = true))
 
     ics = let
-        problem = ODEProblem(CR3BFunction(stm = true), vcat(u, vec(I(6))), (0, ic.Δt), SVector(μ))
+        sys = CR3BFunction(stm = true).sys
+        op = [
+            [:x, :y, :z, :ẋ, :ẏ, :ż] .=> u
+            :Φ => I(6)
+            :μ => μ
+        ]
+        tspan = (0, ic.Δt)
+        problem = ODEProblem(sys, op, tspan)
         solution = solve(
             problem,
             Vern9(),
@@ -150,8 +157,12 @@ unstable = let
     perturbations =
         [diverge(ic[1:6], reshape(ic[7:end], 6, 6), Φ; eps = -1e-7) for ic in ics]
 
+    op = [
+        [:x, :y, :z, :ẋ, :ẏ, :ż] .=> u
+        :μ => μ
+    ]
     problem = EnsembleProblem(
-        ODEProblem(CR3BFunction(), u, (0.0, 2 * ic.Δt), SVector(μ)),
+        ODEProblem(CR3BFunction().sys, op, (0.0, 2 * ic.Δt)),
         prob_func = (prob, i, repeat) -> remake(prob; u0 = perturbations[i]),
     )
 
@@ -171,7 +182,14 @@ stable = let
     Φ = monodromy(u, μ, ic.Δt, CR3BFunction(stm = true))
 
     ics = let
-        problem = ODEProblem(CR3BFunction(stm = true), vcat(u, vec(I(6))), (0, ic.Δt), SVector(μ))
+        sys = CR3BFunction(stm = true).sys
+        op = [
+            [:x, :y, :z, :ẋ, :ẏ, :ż] .=> u
+            :Φ => I(6)
+            :μ => μ
+        ]
+        tspan = (0, ic.Δt)
+        problem = ODEProblem(sys, op, tspan)
         solution = solve(
             problem,
             Vern9(),
@@ -186,8 +204,12 @@ stable = let
     perturbations =
         [converge(ic[1:6], reshape(ic[7:end], 6, 6), Φ; eps = 1e-7) for ic in ics]
 
+    op = [
+        [:x, :y, :z, :ẋ, :ẏ, :ż] .=> u
+        :μ => μ
+    ]
     problem = EnsembleProblem(
-        ODEProblem(CR3BFunction(), u, (0.0, -2.1 * ic.Δt), SVector(μ)),
+        ODEProblem(CR3BFunction().sys, op, (0.0, -2.1 * ic.Δt)),
         prob_func = (prob, i, repeat) -> remake(prob; u0 = perturbations[i]),
     )
 
@@ -259,7 +281,14 @@ unstable = let
     Φ = monodromy(u, μ, ic.Δt, CR3BFunction(stm = true))
 
     ics = let
-        problem = ODEProblem(CR3BFunction(stm = true), vcat(u, vec(I(6))), (0, ic.Δt), SVector(μ))
+        sys = CR3BFunction(stm = true).sys
+        op = [
+            [:x, :y, :z, :ẋ, :ẏ, :ż] .=> u
+            :Φ => I(6)
+            :μ => μ
+        ]
+        tspan = (0, ic.Δt)
+        problem = ODEProblem(sys, op, tspan)
         solution = solve(
             problem,
             Vern9(),
@@ -274,8 +303,12 @@ unstable = let
     perturbations =
         [diverge(ic[1:6], reshape(ic[7:end], 6, 6), Φ; eps = -1e-7) for ic in ics]
 
+    op = [
+        [:x, :y, :z, :ẋ, :ẏ, :ż] .=> u
+        :μ => μ
+    ]
     problem = EnsembleProblem(
-        ODEProblem(CR3BFunction(), u, (0.0, 2 * ic.Δt), SVector(μ)),
+        ODEProblem(CR3BFunction().sys, op, (0.0, 2 * ic.Δt)),
         prob_func = (prob, i, repeat) -> remake(prob; u0 = perturbations[i]),
     )
 
@@ -295,7 +328,14 @@ stable = let
     Φ = monodromy(u, μ, ic.Δt, CR3BFunction(stm = true))
 
     ics = let
-        problem = ODEProblem(CR3BFunction(stm = true), vcat(u, vec(I(6))), (0, ic.Δt), SVector(μ))
+        sys = CR3BFunction(stm = true).sys
+        op = [
+            [:x, :y, :z, :ẋ, :ẏ, :ż] .=> u
+            :Φ => I(6)
+            :μ => μ
+        ]
+        tspan = (0, ic.Δt)
+        problem = ODEProblem(sys, op, tspan)
         solution = solve(
             problem,
             Vern9(),
@@ -310,8 +350,12 @@ stable = let
     perturbations =
         [converge(ic[1:6], reshape(ic[7:end], 6, 6), Φ; eps = 1e-7) for ic in ics]
 
+    op = [
+        [:x, :y, :z, :ẋ, :ẏ, :ż] .=> u
+        :μ => μ
+    ]
     problem = EnsembleProblem(
-        ODEProblem(CR3BFunction(), u, (0.0, -2.1 * ic.Δt), SVector(μ)),
+        ODEProblem(CR3BFunction().sys, op, (0.0, -2.1 * ic.Δt)),
         prob_func = (prob, i, repeat) -> remake(prob; u0 = perturbations[i]),
     )
 
